--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,6 @@
             <groupId>org.openslide</groupId>
             <artifactId>openslide</artifactId>
             <version>3.4.1_2</version>
-            <!-- <scope>system</scope>
-            <systemPath>${project.basedir}/lib/openslide-3.4.1_2.jar</systemPath> -->
         </dependency>
 
         <dependency>
@@ -45,8 +43,6 @@
             <artifactId>openslide</artifactId>
             <version>3.4.1_2</version>
             <classifier>natives-windows</classifier>
-            <!-- <scope>system</scope>
-            <systemPath>${project.basedir}/lib/openslide-3.4.1_2-natives-windows.jar</systemPath> -->
         </dependency>
 
         <dependency>
@@ -62,22 +58,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
-            </plugin>
-
-           <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>fi.ylihallila.server.Main</mainClass>
-                        </manifest>
-                    </archive>
+                    <source>13</source>
+                    <target>13</target>
                 </configuration>
-            </plugin> -->
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -96,7 +81,6 @@
                 <executions>
                     <execution>
                         <id>make-assembly</id>
-                        <!-- bind to the packaging phase -->
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
