--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
-            <version>3.5.0</version>
+            <version>3.8.0</version>
         </dependency>
 
         <dependency>
@@ -36,6 +36,7 @@
             <groupId>org.openslide</groupId>
             <artifactId>openslide</artifactId>
             <version>3.4.1_2</version>
+            <type>jar</type>
         </dependency>
 
         <dependency>
@@ -43,6 +44,7 @@
             <artifactId>openslide</artifactId>
             <version>3.4.1_2</version>
             <classifier>natives-windows</classifier>
+            <type>jar</type>
         </dependency>
 
         <dependency>
@@ -55,6 +57,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0.pr1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>vue</artifactId>
+            <version>2.6.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
         </dependency>
 
         <dependency>
