Improve User API

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,7 +6,9 @@ auth.guest.enabled = true
 auth.simple.enabled = true
 auth.microsoft.enabled = true
 
-roles.manage.personal.projects.default = true
+roles = {
+    manage.personal.projects.default = true
+}
 
 ssl.keystore.path = "keystore.jks"
 ssl.keystore.password = "qwerty"
