Initial implementation of AWS S3 integration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -24,6 +24,12 @@ allas = {
     tenant.name = ""
 }
 
+s3 = {
+    aws.access.key.id = ""
+    aws.secret.access.key = ""
+    region = "EU_CENTRAL_1"
+}
+
 flatfile = {
     directory = "slides"
 }
