--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>15</maven.compiler.release>
     </properties>
 
     <repositories>
@@ -18,6 +18,18 @@
             <url>file://${basedir}/maven</url>
         </repository>
     </repositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>2.15.61</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -43,7 +55,11 @@
             <artifactId>joss</artifactId>
             <version>0.10.4.1</version>
             <type>jar</type>
-            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
         </dependency>
 
         <dependency>
@@ -51,7 +67,6 @@
             <artifactId>openslide</artifactId>
             <version>3.4.1_2</version>
             <type>jar</type>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -60,7 +75,6 @@
             <version>3.4.1_2</version>
             <classifier>natives-windows</classifier>
             <type>jar</type>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -161,8 +175,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
 
