--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ dependencies {
     implementation 'org.javaswift:joss:0.10.4.1'
     implementation 'software.amazon.awssdk:s3:2.15.61'
     implementation 'org.openslide:openslide:3.4.1_2'
-    implementation 'org.openslide:openslide:3.4.1_2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'net.dongliu:gson-java8-datatype:1.1.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0.pr1'
@@ -28,7 +27,7 @@ dependencies {
     implementation 'com.microsoft.azure:msal4j:1.6.1'
     implementation 'com.typesafe:config:1.4.0'
     implementation 'com.h2database:h2:1.4.195'
-    implementation 'org.hibernate:hibernate-agroal:5.4.18.Final'
+    implementation 'org.hibernate:hibernate-c3p0:5.4.18.Final'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'org.mockito:mockito-core:3.2.4'
     testImplementation 'com.konghq:unirest-java:3.4.00'
