--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ jar {
     manifest {
         attributes('Implementation-Title': project.name,
                    'Implementation-Version': project.version,
-                   'Main-Class': 'fi.ylihallila.server.Main')
+                   'Main-Class': mainClassName)
     }
 
     from {
