--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,17 +1,42 @@
-server.host = "http://localhost"
-server.port.secure = 7000
-server.port.insecure = 7777
+# Server
 
-auth.guest.enabled = true
-auth.simple.enabled = true
-auth.microsoft.enabled = true
+server = {
+    host = "http://localhost"
+    port.secure = 7000
+    port.insecure = 7777
+}
+
+# Authentication
+
+auth = {
+    guest.enabled = true
+    simple.enabled = true
+    microsoft.enabled = true
+}
+
+microsoft = {
+    app.id = "eccc9211-faa5-40d5-9ff9-7a5087dbcadb"
+    jwk.provider = "https://login.microsoftonline.com/common/discovery/keys"
+}
+
+# General
 
 roles = {
     manage.personal.projects.default = true
 }
 
-ssl.keystore.path = "keystore.jks"
-ssl.keystore.password = "qwerty"
+uploads = {
+    max.size = "5M"
+}
+
+# SSL
+
+ssl = {
+    keystore.path = "keystore.jks"
+    keystore.password = "qwerty"
+}
+
+# Storage
 
 storage.provider = "Flatfile"
 
@@ -33,6 +58,3 @@ s3 = {
 flatfile = {
     directory = "slides"
 }
-
-app.id = "eccc9211-faa5-40d5-9ff9-7a5087dbcadb"
-jwk.provider = "https://login.microsoftonline.com/common/discovery/keys"
