--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,6 +6,21 @@ server = {
     port.insecure = 7777
 }
 
+# Email
+smtp = {
+    tls = true
+    host = "http://127.0.0.1"
+    port = 25
+
+    # If set to "*", all hosts are trusted. If set to a whitespace separated list of hosts, those hosts are trusted.
+    ssl.trust = ""
+
+    email = ""
+
+    username = ""
+    password = ""
+}
+
 # Authentication
 
 auth = {
