--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
+    mavenCentral()
 }
 
 dependencies {
@@ -28,8 +29,8 @@ dependencies {
     implementation 'com.microsoft.azure:msal4j:1.10.0'
     implementation 'com.typesafe:config:1.4.1'
     implementation 'com.h2database:h2:1.4.195'
-    implementation 'org.hibernate:hibernate-c3p0:5.4.31.Final'
-    implementation 'javax.mail:javax.mail-api:1.6.2'
+    implementation 'org.hibernate:hibernate-c3p0:5.5.7.Final'
+    implementation 'org.simplejavamail:simple-java-mail:6.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'org.mockito:mockito-core:3.2.4'
     testImplementation 'com.konghq:unirest-java:3.4.00'
