--- a/build.gradle
+++ b/build.gradle
@@ -15,26 +15,26 @@ repositories {
 dependencies {
     implementation 'io.javalin:javalin:3.13.7'
     implementation 'io.javalin:javalin-openapi:3.13.7'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'ch.qos.logback:logback-classic:1.2.6'
     implementation 'org.javaswift:joss:0.10.4.1'
     implementation 'software.amazon.awssdk:s3:2.15.61'
     implementation 'org.openslide:openslide:3.4.1_2'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'net.dongliu:gson-java8-datatype:1.1.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0.pr1'
-    implementation 'org.apache.commons:commons-compress:1.20'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+    implementation 'org.apache.commons:commons-compress:1.21'
     implementation 'commons-validator:commons-validator:1.7'
-    implementation 'com.auth0:java-jwt:3.16.0'
-    implementation 'com.auth0:jwks-rsa:0.18.0'
-    implementation 'com.microsoft.azure:msal4j:1.10.0'
+    implementation 'com.auth0:java-jwt:3.18.2'
+    implementation 'com.auth0:jwks-rsa:0.20.0'
+    implementation 'com.microsoft.azure:msal4j:1.11.0'
     implementation 'com.typesafe:config:1.4.1'
     implementation 'com.h2database:h2:1.4.195'
-    implementation 'org.hibernate:hibernate-c3p0:5.5.7.Final'
+    implementation 'org.hibernate:hibernate-c3p0:5.5.8.Final'
     implementation 'org.simplejavamail:simple-java-mail:6.6.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.mockito:mockito-core:3.2.4'
-    testImplementation 'com.konghq:unirest-java:3.4.00'
-    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testImplementation 'com.konghq:unirest-java:3.13.0'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
 }
 
 mainClassName = 'fi.ylihallila.server.Main'
