SSL & port changes  - SSL not officially supported anymore: use a reverse proxy instead  - port defined via commandline instead of config, also removes the need for two separate ports

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,8 +1,10 @@
 # Server
 
 server = {
+    # Host without trailing slash. Remember to include port if running on a custom port.
+    # host = "https://example.com"
+    # host = "https://example.com:1234"
     host = "http://localhost"
-    port = 7777
 }
 
 # Email
