Send email when resetting password

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -10,7 +10,7 @@ server = {
 # Email
 smtp = {
     tls = true
-    host = "http://127.0.0.1"
+    host = "localhost"
     port = 25
 
     # If set to "*", all hosts are trusted. If set to a whitespace separated list of hosts, those hosts are trusted.
