--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.h2database:h2:1.4.195'
     implementation 'org.hibernate:hibernate-c3p0:5.5.8.Final'
     implementation 'org.simplejavamail:simple-java-mail:6.6.1'
+    implementation 'org.flywaydb:flyway-core:8.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.mockito:mockito-core:3.2.4'
     testImplementation 'com.konghq:unirest-java:3.13.0'
