feat: compress tiles

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -45,6 +45,9 @@ uploads = {
     max.size = "5M"
 }
 
+# Sets the compression for the tiled images; JPEG quality 0-100, default 75.
+tiler.compression = 75
+
 # SSL
 
 ssl = {
