wip microsoft auth improvements

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -28,6 +28,12 @@ auth = {
     guest.enabled = true
     simple.enabled = true
     microsoft.enabled = true
+
+    # When Microsoft Authentication is enabled, specifies whether any organization is allowed to authenticate or only those listed at `microsoft.allowed.organizations`
+    microsoft.allow.any = false
+
+    # List of allowed organizations; see the documentation on how to find out your organization ID.
+    microsoft.allowed.organizations = []
 }
 
 microsoft = {
