feat!: rename "Flatfile" storage provider to "Local"

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -57,7 +57,7 @@ ssl = {
 
 # Storage
 
-storage.provider = "Flatfile"
+storage.provider = "local"
 
 allas = {
     username = ""
@@ -68,6 +68,6 @@ allas = {
     tenant.name = ""
 }
 
-flatfile = {
+local = {
     directory = "slides"
 }
